--- a/Dream/app/src/main/res/layout/item_pacote.xml
+++ b/Dream/app/src/main/res/layout/item_pacote.xml
@@ -1,42 +1,60 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:tools="http://schemas.android.com/tools">
+    android:layout_height="match_parent">
 
     <android.support.v7.widget.CardView
+        android:id="@+id/card_view"
         android:layout_width="0dp"
-        android:layout_height="match_parent"
-        app:cardCornerRadius="5sp"
+        android:layout_height="wrap_content"
         android:layout_margin="8dp"
+        app:cardCornerRadius="10dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0">
 
         <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="200dp">
+            android:layout_height="match_parent">
 
             <ImageView
                 android:id="@+id/foto"
-                android:layout_width="395dp"
+                android:layout_width="0dp"
                 android:layout_height="120dp"
+                android:scaleType="centerCrop"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent" />
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                tools:src="@drawable/bh" />
 
             <TextView
+                android:id="@+id/local"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:layout_marginEnd="8dp"
                 android:layout_marginBottom="8dp"
                 android:background="#4B000000"
                 android:padding="10dp"
                 android:textColor="@android:color/white"
                 app:layout_constraintBottom_toBottomOf="@+id/foto"
-                tools:layout_editor_absoluteX="8dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.029"
+                app:layout_constraintStart_toStartOf="parent"
                 tools:text="@tools:sample/cities" />
+
+            <View
+                android:layout_width="0dp"
+                android:layout_height="3dp"
+                app:layout_constraintBottom_toBottomOf="@+id/foto"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="parent"
+                android:background="@android:color/holo_orange_light"/>
 
 
             <TextView
@@ -44,27 +62,32 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="8dp"
+                android:text=""
+                android:textSize="16sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/foto"
-                tools:text="@tools:sample/cities"
-                android:textSize="22sp"/>
+                tools:text="@tools:sample/cities" />
 
             <TextView
                 android:id="@+id/valor"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
+                android:layout_marginBottom="8dp"
+                android:text=""
+                android:textColor="@android:color/holo_green_dark"
+                android:textSize="16sp"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="@id/dias"
                 app:layout_constraintTop_toBottomOf="@+id/dias"
-                tools:text="@tools:sample/us_phones"
-                android:textColor="@android:color/holo_green_dark"
-                android:textSize="16sp"/>
-
+                tools:text="@tools:sample/us_phones" />
 
         </android.support.constraint.ConstraintLayout>
     </android.support.v7.widget.CardView>
 </android.support.constraint.ConstraintLayout>
+
+
