resumo do pacote

--- a/Dream/app/src/main/res/values/colors.xml
+++ b/Dream/app/src/main/res/values/colors.xml
@@ -2,6 +2,6 @@
 <resources>
     <color name="colorPrimary">#FF9800</color>
     <color name="colorPrimaryDark">#865101</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorAccent">#673AB7</color>
 </resources>
 
