--- a/Dream/app/src/main/res/layout/activity_pacotes.xml
+++ b/Dream/app/src/main/res/layout/activity_pacotes.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".PacotesActivity">
+    tools:context=".activity.PacotesActivity">
 
     <View
         android:id="@+id/background"
