--- a/Dream/app/src/main/res/layout/activity_pagamento.xml
+++ b/Dream/app/src/main/res/layout/activity_pagamento.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".PagamentoActivity">
+    tools:context=".activity.PagamentoActivity">
 
     <TextView
         android:id="@+id/textView2"
