--- a/Dream/app/src/main/res/layout/activity_resumo_pacote.xml
+++ b/Dream/app/src/main/res/layout/activity_resumo_pacote.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ResumoPacoteActivity">
+    tools:context=".activity.ResumoPacoteActivity">
 
     <ImageView
         android:id="@+id/resumo_foto_local_pacote"
