--- a/Dream/app/src/main/res/layout/activity_pagamento.xml
+++ b/Dream/app/src/main/res/layout/activity_pagamento.xml
@@ -7,11 +7,11 @@
     tools:context=".activity.PagamentoActivity">
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/payment_text"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_margin="20dp"
-        android:text="Digite as informações do cartão de crédito que você  deseja usar para o pagamento"
+        android:text="@string/payment_text"
         android:textAlignment="center"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -26,10 +26,10 @@
         android:layout_marginTop="8dp"
         android:text="Valor da compra:"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+        app:layout_constraintTop_toBottomOf="@+id/payment_text" />
 
     <TextView
-        android:id="@+id/textView4"
+        android:id="@+id/payment_price"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
@@ -40,25 +40,80 @@
         android:textSize="22sp"/>
 
     <EditText
-        android:id="@+id/editText"
+        android:id="@+id/payment_number_card"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_margin="8dp"
         android:hint="Número do Cartão"
-        android:inputType="numberSigned"
+        android:inputType="number"
         android:maxLength="12"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView4" />
+        app:layout_constraintTop_toBottomOf="@+id/payment_price" />
 
     <EditText
-        android:id="@+id/editText1"
+        android:id="@+id/payment_month_card"
+        android:layout_width="40dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:hint="MM"
+        android:inputType="number"
+        android:maxLength="2"
+        app:layout_constraintStart_toStartOf="@+id/payment_number_card"
+        app:layout_constraintTop_toBottomOf="@+id/payment_number_card" />
+
+    <EditText
+        android:id="@+id/payment_year_card"
+        android:layout_width="40dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:hint="AA"
+        android:textAlignment="center"
+        android:inputType="number"
+        android:maxLength="2"
+        app:layout_constraintStart_toEndOf="@+id/payment_month_card"
+        app:layout_constraintTop_toBottomOf="@+id/payment_number_card" />
+
+    <EditText
+        android:id="@+id/payment_cvc_card"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="8dp"
+        android:hint="CVC"
+        android:inputType="number"
+        android:maxLength="3"
+        android:textAlignment="center"
+        android:drawableStart="@drawable/card"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1"
+        app:layout_constraintStart_toEndOf="@+id/payment_year_card"
+        app:layout_constraintTop_toBottomOf="@+id/payment_number_card" />
+
+    <EditText
+        android:id="@+id/payment_name_card"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_margin="8dp"
-        android:hint="Número do Cartão"
-        android:inputType="numberSigned"
+        android:hint="Nome no Cartão"
+        android:inputType="text"
+        android:digits="@string/alphabet"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editText" />
+        app:layout_constraintTop_toBottomOf="@+id/payment_cvc_card" />
+
+
+    <Button
+        android:id="@+id/payment_btn_pay"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:background="@drawable/button_redondo"
+        android:text="Finalizar Compra"
+        android:textColor="@android:color/white"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/payment_name_card" />
+
 </android.support.constraint.ConstraintLayout>
