--- a/Dream/app/src/main/res/layout/activity_compra.xml
+++ b/Dream/app/src/main/res/layout/activity_compra.xml
@@ -93,4 +93,18 @@
         android:textColor="@android:color/holo_green_dark"
         app:layout_constraintStart_toStartOf="@+id/finish_date"
         app:layout_constraintTop_toBottomOf="@+id/finish_date" />
+
+    <Button
+        android:id="@+id/finish_btn_voltar"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:text="Voltar"
+        android:background="@drawable/button_redondo"
+        android:textColor="@android:color/white"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/finish_price" />
 </android.support.constraint.ConstraintLayout>
