--- a/MovieList/app/src/main/res/layout/activity_form.xml
+++ b/MovieList/app/src/main/res/layout/activity_form.xml
@@ -4,32 +4,58 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".FormActivity">
+    tools:context=".FormActivity"
+    android:background="#CFCDCD"
+    >
 
     <EditText
-        android:id="@+id/formulario_nota_titulo"
+        android:id="@+id/form_titulo"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_margin="20dp"
+       android:layout_margin="8dp"
+        android:background="@android:color/transparent"
         android:hint="Título"
-        android:textSize="30sp"
+        android:textAlignment="center"
+        android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <EditText
-        android:id="@+id/formulario_nota_descricao"
+    <ImageView
+        android:id="@+id/form_image"
+        android:layout_width="150dp"
+        android:layout_height="200dp"
+        android:layout_margin="8dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/form_titulo" />
+
+    <RatingBar
+        android:id="@+id/form_ratingBar"
+        android:layout_width="wrap_content"
+        android:layout_height="47dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/form_image"
+        android:textColor="@android:color/white"/>
+
+
+    <TextView
+        android:id="@+id/form_sinopse"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:layout_margin="8dp"
         android:layout_marginBottom="8dp"
-        android:layout_marginTop="8dp"
         android:background="@android:color/transparent"
-        android:hint="Descrição"
         android:gravity="top"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@id/formulario_nota_titulo"
-        app:layout_constraintStart_toStartOf="@id/formulario_nota_titulo"
-        app:layout_constraintTop_toBottomOf="@id/formulario_nota_titulo" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/form_ratingBar" />
+
 
 </android.support.constraint.ConstraintLayout>
