--- a/MovieList/app/src/main/res/layout/activity_card_item.xml
+++ b/MovieList/app/src/main/res/layout/activity_card_item.xml
@@ -2,13 +2,14 @@
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/cardView"
+
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="5dp"
     app:cardBackgroundColor="#222222">
 
     <android.support.constraint.ConstraintLayout
+        android:id="@+id/cardView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@drawable/background_card">
@@ -21,7 +22,7 @@
             android:text="Titulo"
             android:textAlignment="center"
             android:textColor="@android:color/white"
-            android:textSize="25sp"
+            android:textSize="18sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -30,27 +31,41 @@
 
         <ImageView
             android:id="@+id/card_image"
-            android:layout_width="150dp"
+            android:layout_width="100dp"
             android:layout_height="150dp"
             android:layout_margin="8dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/card_tittle" />
+            app:layout_constraintTop_toBottomOf="@+id/card_tittle"
+            android:tag=""/>
+
+        <RatingBar
+            android:id="@+id/card_rating"
+            style="@android:style/Widget.DeviceDefault.RatingBar.Small"
+            android:layout_width="wrap_content"
+            android:layout_height="0dp"
+            android:layout_margin="8dp"
+            android:textColor="@android:color/white"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/card_image" />
 
         <TextView
             android:id="@+id/card_sinopse"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-           android:layout_margin="8dp"
-            android:maxLines="6"
+            android:layout_margin="8dp"
+            android:layout_marginTop="8dp"
+            android:ellipsize="end"
+            android:maxLength="200"
+            android:textSize="12sp"
             android:textColor="@android:color/white"
-            android:textSize="18sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintTop_toBottomOf="@+id/card_image"
-            app:layout_constraintStart_toStartOf="@+id/card_tittle"
-            tools:text="Descrição" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/card_rating" />
+
+
 
     </android.support.constraint.ConstraintLayout>
 
