--- a/MovieList/app/src/main/res/layout/movies_list_activity.xml
+++ b/MovieList/app/src/main/res/layout/movies_list_activity.xml
@@ -13,7 +13,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:padding="10dp"
-        android:text="Inserir uma nota"
+        android:drawableStart="@drawable/ic_add"
+        android:text="Novo Filme"
         android:textColor="@android:color/darker_gray"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
