--- a/Students/app/src/main/res/layout/activity_students_list.xml
+++ b/Students/app/src/main/res/layout/activity_students_list.xml
@@ -25,7 +25,6 @@
         android:id="@+id/layout_gradient_insert"
         android:layout_width="0dp"
         android:layout_height="5dp"
-        android:layout_marginEnd="8dp"
         android:background="@drawable/gradiente_top"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -35,8 +34,8 @@
         android:id="@+id/students_list"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_margin="9dp"
+        app:layoutManager="android.support.v7.widget.LinearLayoutManager"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
