--- a/Students/app/src/main/res/values/colors.xml
+++ b/Students/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorPrimary">#DEAC0F</color>
+    <color name="colorPrimaryDark">#B19A33</color>
+    <color name="colorAccent">#4F6362</color>
 </resources>
